--- a/src/pages/NewProject/NewProject.css
+++ b/src/pages/NewProject/NewProject.css
@@ -10,7 +10,7 @@ Gabriela Emanuele de Araújo Amorim - 2020011260
 }
 
 body {
-    background-image: url('../img/background.jpg');
+    background-image: url('../assets/img/background.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -28,6 +28,9 @@ body {
     grid-template-columns: repeat(40, 1fr);
     max-width: 700px;
     width: 70%;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: cover;
 }
 
 .areaTrabalho div {
