--- a/src/index.css
+++ b/src/index.css
@@ -193,3 +193,18 @@ body * {
   cursor: pointer;
   box-shadow: 0px 10px 40px -12px #bd414152;
 }
+
+.loading-icon {
+  color: teal;
+  font-size: 2rem;
+  animation: animate 2s infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(720deg);
+  }
+}
